# Sockets

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
examples/: CMakeLists.txt
examples/0/: CMakeLists.txt  Readme.md  main.cpp  readme.md
examples/0/tcp/: CMakeLists.txt  main.cpp
examples/0/tls/: CMakeLists.txt  main.cpp
examples/0/udp/: main.cpp
examples/1/: CMakeLists.txt  Readme.md
examples/1/tcp/: CMakeLists.txt  main.cpp
examples/1/tls/: CMakeLists.txt  main.cpp
examples/certificates/: generate.sh
examples/tcp/0/: main.cpp  readme.md
examples/tls/: CMakeLists.txt  tls.hpp
examples/tls/0/: CMakeLists.txt  main.cpp  readme.md
examples/udp/0/: CMakeLists.txt  main.cpp  readme.md
examples/utility/certificates/: Readme.md  generate.sh
examples/utility/headers/: tls.hpp
include/: server.hpp  threadpool.hpp
socket/: CMakeLists.txt
socket/Exceptions/: exceptions.hpp
socket/Polling/: CMakeLists.txt  poll.cpp  polling.hpp
socket/Selector/: CMakeLists.txt  poll.cpp  polldev.cpp  selector.hpp
socket/Socket/: CMakeLists.txt  socket.cpp  socket.hpp  tcpsocket.cpp  tlssocket.cpp  udpsocket.cpp
socket/ThreadPool/: CMakeLists.txt  threadpool.cpp  threadpool.hpp
src/: main.cpp  server.cpp
